@@ -121,3 +121,6 @@ ecp224,           DIFFIE_HELLMAN_GROUP, ECP_224_BIT,               0
 ecp256,           DIFFIE_HELLMAN_GROUP, ECP_256_BIT,               0
 ecp384,           DIFFIE_HELLMAN_GROUP, ECP_384_BIT,               0
 ecp521,           DIFFIE_HELLMAN_GROUP, ECP_521_BIT,               0
+modp1024s160,     DIFFIE_HELLMAN_GROUP, MODP_1024_160,             0
+modp2048s224,     DIFFIE_HELLMAN_GROUP, MODP_2048_224,             0
+modp2048s256,     DIFFIE_HELLMAN_GROUP, MODP_2048_256,             0
