@@ -8,6 +8,11 @@ strongswan-4.4.0
   The development of the High Availability functionality was sponsored by
   secunet Security Networks AG.
 
+- Added support for Diffie-Hellman groups 22, 23 and 24 to the gmp, gcrypt
+  and openssl plugins, usable by both pluto and charon. The new proposal
+  keywords are modp1024s160, modp2048s224 and modp2048s256. Thanks to Joy Latten
+  from IBM for his contribution.
+
 - The IKEv1 pluto daemon supports RAM-based virtual IP pools using
   the rightsourceip directive with a subnet from which addresses
   are allocated.
